apps/system/pocket-id/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  serviceName: pocket-id
  replicas: 1
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      serviceAccountName: pocket-id
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v1.2.0
          ports:
            - name: http
              containerPort: 1411
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 60
          volumeMounts:
            - name: data
              mountPath: /app/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: longhorn
        resources:
          requests:
            storage: 8Gi
