apps/system/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: pocket-id
  type: ClusterIP
