apps/system/pocket-id/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocket-id
  namespace: pocket-id
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - auth.quiet.ooo
      secretName: pocket-id-tls
  rules:
    - host: auth.quiet.ooo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket-id
                port:
                  number: 80
